src/main/gen/me/yuge/nonmem/parser/NonmemParser.java
// This is a generated file. Not intended for manual editing.
package me.yuge.nonmem.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static me.yuge.nonmem.psi.NonmemTypes.*;
import static me.yuge.nonmem.parser.NonmemParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class NonmemParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return nonmem(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(COVARIANCE_NAMED_PARAM, DATA_NAMED_PARAM, ESTIMATION_NAMED_PARAM, INPUT_NAMED_PARAM,
      SIMULATION_NAMED_PARAM, SIZES_NAMED_PARAM),
    create_token_set_(ABBR_RECORD, COVARIANCE_RECORD, DATA_RECORD, DES_RECORD,
      ERROR_RECORD, ESTIMATION_RECORD, INPUT_RECORD, MODEL_RECORD,
      OMEGA_RECORD, PK_RECORD, PRED_RECORD, PROBLEM_RECORD,
      RECORD, SIGMA_RECORD, SIMULATION_RECORD, SIZES_RECORD,
      SUBROUTINE_RECORD, TABLE_RECORD, THETA_RECORD),
  };

  /* ********************************************************** */
  // abbr_code_if | abbr_code_do_while | abbr_code_equation
  public static boolean abbr_code(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABBR_CODE, "<abbr code>");
    r = abbr_code_if(b, l + 1);
    if (!r) r = abbr_code_do_while(b, l + 1);
    if (!r) r = abbr_code_equation(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'DOWHILE' '(' abbr_code_expr ')' (abbr_code_equation | abbr_code_if)+ 'ENDDO'
  public static boolean abbr_code_do_while(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_do_while")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABBR_CODE_DO_WHILE, "<abbr code do while>");
    r = consumeToken(b, "DOWHILE");
    r = r && consumeToken(b, LEFT_PAREN);
    r = r && abbr_code_expr(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    r = r && abbr_code_do_while_4(b, l + 1);
    r = r && consumeToken(b, "ENDDO");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (abbr_code_equation | abbr_code_if)+
  private static boolean abbr_code_do_while_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_do_while_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = abbr_code_do_while_4_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!abbr_code_do_while_4_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "abbr_code_do_while_4", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // abbr_code_equation | abbr_code_if
  private static boolean abbr_code_do_while_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_do_while_4_0")) return false;
    boolean r;
    r = abbr_code_equation(b, l + 1);
    if (!r) r = abbr_code_if(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // abbr_code_primary '=' abbr_code_expr
  public static boolean abbr_code_equation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_equation")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABBR_CODE_EQUATION, "<abbr code equation>");
    r = abbr_code_primary(b, l + 1);
    r = r && consumeToken(b, OP_ASSIGN);
    r = r && abbr_code_expr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // abbr_code_plus_factor abbr_code_logic_expr *
  static boolean abbr_code_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_expr")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = abbr_code_plus_factor(b, l + 1);
    r = r && abbr_code_expr_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // abbr_code_logic_expr *
  private static boolean abbr_code_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_expr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!abbr_code_logic_expr(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "abbr_code_expr_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ('DEXP' | 'EXP' | 'SQRT' | 'LOG' | 'ABS' | 'SIN' | id) '(' abbr_code_expr ')'
  public static boolean abbr_code_function(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_function")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABBR_CODE_FUNCTION, "<abbr code function>");
    r = abbr_code_function_0(b, l + 1);
    r = r && consumeToken(b, LEFT_PAREN);
    r = r && abbr_code_expr(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // 'DEXP' | 'EXP' | 'SQRT' | 'LOG' | 'ABS' | 'SIN' | id
  private static boolean abbr_code_function_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_function_0")) return false;
    boolean r;
    r = consumeToken(b, "DEXP");
    if (!r) r = consumeToken(b, "EXP");
    if (!r) r = consumeToken(b, "SQRT");
    if (!r) r = consumeToken(b, "LOG");
    if (!r) r = consumeToken(b, "ABS");
    if (!r) r = consumeToken(b, "SIN");
    if (!r) r = consumeToken(b, ID);
    return r;
  }

  /* ********************************************************** */
  // 'IF' '(' abbr_code_expr ')' ('THEN' ('ELSE' | abbr_code_equation)+ 'ENDIF')?
  public static boolean abbr_code_if(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_if")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABBR_CODE_IF, "<abbr code if>");
    r = consumeToken(b, "IF");
    r = r && consumeToken(b, LEFT_PAREN);
    r = r && abbr_code_expr(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    r = r && abbr_code_if_4(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('THEN' ('ELSE' | abbr_code_equation)+ 'ENDIF')?
  private static boolean abbr_code_if_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_if_4")) return false;
    abbr_code_if_4_0(b, l + 1);
    return true;
  }

  // 'THEN' ('ELSE' | abbr_code_equation)+ 'ENDIF'
  private static boolean abbr_code_if_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_if_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "THEN");
    r = r && abbr_code_if_4_0_1(b, l + 1);
    r = r && consumeToken(b, "ENDIF");
    exit_section_(b, m, null, r);
    return r;
  }

  // ('ELSE' | abbr_code_equation)+
  private static boolean abbr_code_if_4_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_if_4_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = abbr_code_if_4_0_1_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!abbr_code_if_4_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "abbr_code_if_4_0_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // 'ELSE' | abbr_code_equation
  private static boolean abbr_code_if_4_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_if_4_0_1_0")) return false;
    boolean r;
    r = consumeToken(b, "ELSE");
    if (!r) r = abbr_code_equation(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // number
  public static boolean abbr_code_literal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_literal")) return false;
    if (!nextTokenIs(b, NUMBER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, NUMBER);
    exit_section_(b, m, ABBR_CODE_LITERAL, r);
    return r;
  }

  /* ********************************************************** */
  // abbr_code_logic_op abbr_code_plus_factor
  public static boolean abbr_code_logic_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_logic_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABBR_CODE_LOGIC_EXPR, "<abbr code logic expr>");
    r = abbr_code_logic_op(b, l + 1);
    r = r && abbr_code_plus_factor(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '.EQ.' | '.NE.' | '.LE.' | '.GE.' | '.LT.' | '.GT.' | '.AND.' | '.OR.' | '<=' | '>=' | '<' | '>'
  static boolean abbr_code_logic_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_logic_op")) return false;
    boolean r;
    r = consumeToken(b, ".EQ.");
    if (!r) r = consumeToken(b, ".NE.");
    if (!r) r = consumeToken(b, ".LE.");
    if (!r) r = consumeToken(b, ".GE.");
    if (!r) r = consumeToken(b, ".LT.");
    if (!r) r = consumeToken(b, ".GT.");
    if (!r) r = consumeToken(b, ".AND.");
    if (!r) r = consumeToken(b, ".OR.");
    if (!r) r = consumeToken(b, "<=");
    if (!r) r = consumeToken(b, ">=");
    if (!r) r = consumeToken(b, "<");
    if (!r) r = consumeToken(b, ">");
    return r;
  }

  /* ********************************************************** */
  // abbr_code_mul_op abbr_code_primary
  public static boolean abbr_code_mul_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_mul_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _LEFT_, ABBR_CODE_MUL_EXPR, "<abbr code mul expr>");
    r = abbr_code_mul_op(b, l + 1);
    r = r && abbr_code_primary(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // abbr_code_primary abbr_code_mul_expr *
  static boolean abbr_code_mul_factor(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_mul_factor")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = abbr_code_primary(b, l + 1);
    r = r && abbr_code_mul_factor_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // abbr_code_mul_expr *
  private static boolean abbr_code_mul_factor_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_mul_factor_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!abbr_code_mul_expr(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "abbr_code_mul_factor_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // '*' | '/' | '**'
  static boolean abbr_code_mul_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_mul_op")) return false;
    boolean r;
    r = consumeToken(b, OP_MUL);
    if (!r) r = consumeToken(b, OP_QUOTIENT);
    if (!r) r = consumeToken(b, OP_POWER);
    return r;
  }

  /* ********************************************************** */
  // '(' abbr_code_expr ')'
  public static boolean abbr_code_parenthesis(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_parenthesis")) return false;
    if (!nextTokenIs(b, LEFT_PAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_PAREN);
    r = r && abbr_code_expr(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, ABBR_CODE_PARENTHESIS, r);
    return r;
  }

  /* ********************************************************** */
  // abbr_code_plus_op abbr_code_mul_factor
  public static boolean abbr_code_plus_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_plus_expr")) return false;
    if (!nextTokenIs(b, "<abbr code plus expr>", OP_MINUS, OP_PLUS)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _LEFT_, ABBR_CODE_PLUS_EXPR, "<abbr code plus expr>");
    r = abbr_code_plus_op(b, l + 1);
    r = r && abbr_code_mul_factor(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // abbr_code_mul_factor abbr_code_plus_expr *
  static boolean abbr_code_plus_factor(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_plus_factor")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = abbr_code_mul_factor(b, l + 1);
    r = r && abbr_code_plus_factor_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // abbr_code_plus_expr *
  private static boolean abbr_code_plus_factor_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_plus_factor_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!abbr_code_plus_expr(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "abbr_code_plus_factor_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // '+'|'-'
  static boolean abbr_code_plus_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_plus_op")) return false;
    if (!nextTokenIs(b, "", OP_MINUS, OP_PLUS)) return false;
    boolean r;
    r = consumeToken(b, OP_PLUS);
    if (!r) r = consumeToken(b, OP_MINUS);
    return r;
  }

  /* ********************************************************** */
  // abbr_code_variable | abbr_code_function | abbr_code_parenthesis | abbr_code_literal | abbr_code_reference
  static boolean abbr_code_primary(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_primary")) return false;
    boolean r;
    r = abbr_code_variable(b, l + 1);
    if (!r) r = abbr_code_function(b, l + 1);
    if (!r) r = abbr_code_parenthesis(b, l + 1);
    if (!r) r = abbr_code_literal(b, l + 1);
    if (!r) r = abbr_code_reference(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // '-'? (pk_reserved_param | error_reserved_param | id)
  public static boolean abbr_code_reference(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_reference")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABBR_CODE_REFERENCE, "<abbr code reference>");
    r = abbr_code_reference_0(b, l + 1);
    r = r && abbr_code_reference_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '-'?
  private static boolean abbr_code_reference_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_reference_0")) return false;
    consumeToken(b, OP_MINUS);
    return true;
  }

  // pk_reserved_param | error_reserved_param | id
  private static boolean abbr_code_reference_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_reference_1")) return false;
    boolean r;
    r = pk_reserved_param(b, l + 1);
    if (!r) r = error_reserved_param(b, l + 1);
    if (!r) r = consumeToken(b, ID);
    return r;
  }

  /* ********************************************************** */
  // ('THETA' | 'ETA' | 'EPS' | 'DADT' | 'ERR' | 'A' | 'A_0') '(' number ')'
  public static boolean abbr_code_variable(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_variable")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABBR_CODE_VARIABLE, "<abbr code variable>");
    r = abbr_code_variable_0(b, l + 1);
    r = r && consumeTokens(b, 0, LEFT_PAREN, NUMBER, RIGHT_PAREN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // 'THETA' | 'ETA' | 'EPS' | 'DADT' | 'ERR' | 'A' | 'A_0'
  private static boolean abbr_code_variable_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_code_variable_0")) return false;
    boolean r;
    r = consumeToken(b, "THETA");
    if (!r) r = consumeToken(b, "ETA");
    if (!r) r = consumeToken(b, "EPS");
    if (!r) r = consumeToken(b, "DADT");
    if (!r) r = consumeToken(b, "ERR");
    if (!r) r = consumeToken(b, "A");
    if (!r) r = consumeToken(b, "A_0");
    return r;
  }

  /* ********************************************************** */
  // ('DERIV2' '=' ('NO' | 'NOCOMMON')) | ('COMRES' '=' number) | ( 'DECLARE' 'DOWHILE'? id ('(' number ')')?)
  public static boolean abbr_param(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_param")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ABBR_PARAM, "<abbr param>");
    r = abbr_param_0(b, l + 1);
    if (!r) r = abbr_param_1(b, l + 1);
    if (!r) r = abbr_param_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // 'DERIV2' '=' ('NO' | 'NOCOMMON')
  private static boolean abbr_param_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_param_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "DERIV2");
    r = r && consumeToken(b, OP_ASSIGN);
    r = r && abbr_param_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'NO' | 'NOCOMMON'
  private static boolean abbr_param_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_param_0_2")) return false;
    boolean r;
    r = consumeToken(b, "NO");
    if (!r) r = consumeToken(b, "NOCOMMON");
    return r;
  }

  // 'COMRES' '=' number
  private static boolean abbr_param_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_param_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "COMRES");
    r = r && consumeTokens(b, 0, OP_ASSIGN, NUMBER);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'DECLARE' 'DOWHILE'? id ('(' number ')')?
  private static boolean abbr_param_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_param_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "DECLARE");
    r = r && abbr_param_2_1(b, l + 1);
    r = r && consumeToken(b, ID);
    r = r && abbr_param_2_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'DOWHILE'?
  private static boolean abbr_param_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_param_2_1")) return false;
    consumeToken(b, "DOWHILE");
    return true;
  }

  // ('(' number ')')?
  private static boolean abbr_param_2_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_param_2_3")) return false;
    abbr_param_2_3_0(b, l + 1);
    return true;
  }

  // '(' number ')'
  private static boolean abbr_param_2_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_param_2_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, LEFT_PAREN, NUMBER, RIGHT_PAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // << prefixOf "ABBR" >> abbr_param*
  public static boolean abbr_record(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_record")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, ABBR_RECORD, "<abbr record>");
    r = prefixOf(b, l + 1, "ABBR");
    r = r && abbr_record_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // abbr_param*
  private static boolean abbr_record_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "abbr_record_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!abbr_param(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "abbr_record_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // 'PRINT' | 'MATRIX'
  static boolean covariance_chr_param(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "covariance_chr_param")) return false;
    boolean r;
    r = consumeToken(b, "PRINT");
    if (!r) r = consumeToken(b, "MATRIX");
    return r;
  }

  /* ********************************************************** */
  // 'TOL' | 'ATOL'
  static boolean covariance_int_param(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "covariance_int_param")) return false;
    boolean r;
    r = consumeToken(b, "TOL");
    if (!r) r = consumeToken(b, "ATOL");
    return r;
  }
